otp issue need to be fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=AntiSolo
+
+
+spring.data.mongodb.uri = mongodb+srv://Aditya:crKfqQv5f2UyOTPS@cluster0.w03ar.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.database=AntiSolo
+spring.data.mongodb.auto-index-creation = true
+
+
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+#spring.mail.username = mk6748134@gmail.com
+#spring.mail.password = qlzi vgyf yyld shnx
+spring.mail.username = nerdexpress1234@gmail.com
+spring.mail.password = cjkc ygho uoqc pwrw
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+mail.smtp.ssl.trust=*
+
+server.port=7000
