--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.mail.username = nerdexpress1234@gmail.com
 spring.mail.password = cjkc ygho uoqc pwrw
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
-mail.smtp.ssl.trust=*
+logging.level.org.springframework.security=DEBUG
+
 
 server.port=7000
