--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,17 +8,20 @@ spring.data.mongodb.auto-index-creation = true
 
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
-#spring.mail.username = mk6748134@gmail.com
-#spring.mail.password = qlzi vgyf yyld shnx
 spring.mail.username = nerdexpress1234@gmail.com
 spring.mail.password = cjkc ygho uoqc pwrw
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
-logging.level.org.springframework.security=DEBUG
-
-logging.level.org.springframework.messaging=DEBUG
-logging.level.org.springframework.web.socket=DEBUG
-
-
+#logging.level.org.springframework.security=DEBUG
+#
+#logging.level.org.springframework.messaging=DEBUG
+#logging.level.org.springframework.web.socket=DEBUG
+server.address=0.0.0.0
 
 server.port=7000
+logging.level.org.springframework.http.converter.json=DEBUG
+logging.level.com.fasterxml.jackson.databind=DEBUG
+
+
+#spring.mail.username = mk6748134@gmail.com
+#spring.mail.password = qlzi vgyf yyld shnx
