--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,17 @@
 spring.application.name=AntiSolo
 
 
-spring.data.mongodb.uri = mongodb+srv://Aditya:crKfqQv5f2UyOTPS@cluster0.w03ar.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-spring.data.mongodb.database=AntiSolo
+spring.data.mongodb.uri =${MONGO_URI}
+spring.data.mongodb.database=${MONGO_DB_NAME}
 spring.data.mongodb.auto-index-creation = true
 
 
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
-spring.mail.username = nerdexpress1234@gmail.com
-spring.mail.password = cjkc ygho uoqc pwrw
+spring.mail.username = ${MAIL_USERNAME}
+spring.mail.password = ${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
-#logging.level.org.springframework.security=DEBUG
-#
-#logging.level.org.springframework.messaging=DEBUG
-#logging.level.org.springframework.web.socket=DEBUG
 server.address=0.0.0.0
 
 server.port=7000
-logging.level.org.springframework.http.converter.json=DEBUG
-logging.level.com.fasterxml.jackson.databind=DEBUG
-
-
-#spring.mail.username = mk6748134@gmail.com
-#spring.mail.password = qlzi vgyf yyld shnx
