--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,10 @@ spring.mail.username = ${MAIL_USERNAME}
 spring.mail.password = ${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
-server.address=0.0.0.0
+#server.address=0.0.0.0
 
-server.port=7000
+frontend.utl = ${FRONTEND_URL}
+cloud.name = ${CLOUD_NAME}
+cloud.key = ${CLOUD_API_KEY}
+cloud.secret = ${API_SECRET}
+#server.port=7000
